Fix vertical misalignment of payment history button

--- a/assets/styles/components/_nav.styl
+++ b/assets/styles/components/_nav.styl
@@ -160,12 +160,15 @@
   background-color transparent
   text-decoration none
   cursor: pointer
+  padding 0
+  margin 0
 
   &:hover
     text-decoration none
 
 .nav button
   border: 0px none
+  display inline
 
 .nav .current
   color black
